# hacPack

./: .gitignore  CMakeLists.txt  Makefile
.github/workflows/: c-cpp.yml
